maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:68: error: not found: value trouveBiscuit
trouveBiscuit()
^